# graphql-server-using-python

./: .env.example  README.md  create_tables.py  database.py  m_types.py  main.py  models.py  mutations.py  pubsub.py  pyproject.toml  queries.py  server.py  subscriptions.py
mutations/: __init__.py  user_mutations.py
queries/: __init__.py  other_queries.py  user_queries.py
subscriptions/: __init__.py  user_subscriptions.py
